added code to HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -13,6 +13,44 @@
     </header>
     <main>
       <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Enter your HTML notes here</li>
+          <li>The head element contains the metadata</li>
+          <li>The metadata contains information about the webpage</li>
+          <li>The headings go all the way up to 6: h1...h6</li>
+          <li>The img element has a source attribute (src) that gives the url of the image</li>
+          <li>We need the DOCTYPE to show what type of document it is</li>
+        </ul>
+
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter CSS notes here</li>
+        
+        </ul>
+   
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Enter your Git notes here</li>
+        </ul>
+
+   
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JacaScript notes here</li>
+        </ul>
+   
+      </section>
     </main>
 
     <footer>
