added CSS to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -30,6 +31,10 @@
         <h2>CSS</h2>
         <ul>
           <li>Enter CSS notes here</li>
+          <li>Styles the HTML elements</li>
+          <li>You have declaration blocks with a selector and then the property and value inside</li>
+          <li>You have properties like: margin, padding, font, color, width, etc</li>
+          <li>you have to link the stylesheet to the html document for it to work</li>
         
         </ul>
    
@@ -39,6 +44,10 @@
         <h2>Git</h2>
         <ul>
           <li>Enter your Git notes here</li>
+          <li>every git command starts with git</li>
+          <li>with cd you change what directory or folder you are in</li>
+          <li>with pwd you know what folder you are working in</li>
+          <li>ls shows you what is inside the folder you are working in</li>
         </ul>
 
    
