I added JavaScripit to the file so we randomize what topics we will study

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -58,6 +58,11 @@
         <h2>JavaScript</h2>
         <ul>
           <li>Enter your JacaScript notes here</li>
+          <li>For a function to be executed you have to call on it</li>
+          <li>JavaScript works from top to bottom so you need to have things in order for them to be executed correctly</li>
+          <li>A for loop runs through connditions and gives the matcing output</li>
+          <li>We can have string, boolean, and integer values in the same paranthesis</li>
+          <li>Indexes start at 0</li>
         </ul>
    
       </section>
